--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode/
+.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,python
